Added G division to the course form

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                   <option value="D">D</option>
                   <option value="E">E</option>
                   <option value="F">F</option>
+                  <option value="G">G</option>
                   <option value="notApplicable">Not Applicable</option>
               </select>
           </div>
