added PO/PSO Attainment of the Course table

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
      <!-- Excel Load Button -->
      <div>
-      <div id="ExcelInput" class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white hidden">
+      <div id="ExcelInput" class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white hidden ">
         <div class="my-2 flex">
           <input type="file" id="fileInput" class="bg-gray-200 shadow-xl p-2 rounded-l-lg focus:outline-none flex-grow mr-4" />
           <button id="loadButton" class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-r-lg focus:outline-none">
@@ -169,6 +169,9 @@
 
     <!-- Table 7 -->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView7" ></div>
+
+    <!-- Table 7 -->
+    <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView8" ></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
     <script src="script.js"></script>
