--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
     <script src="script.js"></script>
     <!-- Add any necessary CSS or other meta tags here -->
   </head>
 
   <body>
+   
+    <div id="toast" class="hidden fixed flex items-center w-full max-w-xs p-4 space-x-4 text-white bg-red-500 divide-x divide-gray-200 rounded-lg shadow top-5 right-5 dark:text-gray-400 dark:divide-gray-700 space-x dark:bg-gray-800 fade-in-right" role="alert">
+      Toast Message
+    </div>
     <div class="flex justify-center">
       <img src="img/LogoHeader.png" alt="DMCLogoHeader" class="w-1/2 mx-auto">
     </div>
@@ -27,7 +32,7 @@
         <div class="flex justify-center items-center">
           <h1 class="font-bold uppercase text-5xl">Course Details</h1>
         </div>
-        <form id="courseForm">
+        <form id="courseForm" >
           <div class="grid gap-5 md:grid-cols-2 mt-5">
             <div>
               <label for="programmeName">1. Name of the Programme:</label>
@@ -329,10 +334,7 @@
 
     <!-- Excel Load Button -->
     <div>
-      <div
-        id="ExcelInput"
-        class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white hidden"
-      >
+      <div id="ExcelInput" class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white " >
       <div>
         <h1  class="font-bold uppercase text-3xl">Upload Student Details</h1></div>
         <div class="my-2 flex">
