added new print button

--- a/index.html
+++ b/index.html
@@ -397,6 +397,12 @@
     <!-- Table 8 -->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView8" ></div>
 
+    <div id="printButtonContainer" class="flex justify-center items-center my-4">
+      <button id="printButton" class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-lg w-max focus:outline-none focus:shadow-outline"  hidden>
+        Print Report  <!-- changed from Print page -->
+      </button>
+    </div>
+    
   </body>
   
 </html>
