--- a/index.html
+++ b/index.html
@@ -403,6 +403,80 @@
       </button>
     </div>
     
+    <script>
+      // Function to handle the printing
+      function printPage() {
+        // Hide elements that you want to exclude from printing
+        document.getElementById('courseForm').style.display = 'none';
+        document.getElementById('entireform').style.display = 'none';
+        document.getElementById('ExcelInput').style.display = 'none';
+        document.getElementById('PoInputs').style.display = 'none';
+        document.getElementById('PSOInputs').style.display = 'none';
+        document.getElementById('COInputs').style.display = 'none';
+        document.getElementById('displayButton').style.display = 'none';
+        document.getElementById('printButton').style.display = 'none';
+
+        // Create a container for the signatures
+        const signaturesContainer = document.createElement('div');
+        signaturesContainer.style.textAlign = 'center';
+        signaturesContainer.style.marginTop = '50px';
+        signaturesContainer.className = 'print-only'; // Add a CSS class for printing
+
+        // Create the Teacher Incharge signature
+        const teacherSignature = document.createElement('div');
+        teacherSignature.style.display = 'inline-block';
+        teacherSignature.style.marginRight = '309px'; // Increase the margin-right for more distance
+        teacherSignature.innerHTML = `
+          <div style="border-top: 2px solid #000;">Teacher Incharge</div>
+        `;
+
+        // Create the Principal signature
+        const principalSignature = document.createElement('div');
+        principalSignature.style.display = 'inline-block';
+        principalSignature.innerHTML = `
+          <div style="border-top: 2px solid #000;">Principal</div>
+        `;
+
+        // Append signatures to the container
+        signaturesContainer.appendChild(teacherSignature);
+        signaturesContainer.appendChild(principalSignature);
+
+        // Append the signatures container to the body
+        document.body.appendChild(signaturesContainer);
+
+        // Trigger the print dialog
+        window.print();
+
+        // Listen for the afterprint event to show the button again
+        window.onafterprint = function () {
+          // Show the "Print Page" button
+          document.getElementById('printButton').style.display = 'block';
+        };
+
+        // Remove the signatures container after printing
+        document.body.removeChild(signaturesContainer);
+
+        // Restore the hidden elements after printing
+        document.getElementById('courseForm').style.display = 'block';
+        document.getElementById('entireform').style.display = 'block';
+        document.getElementById('ExcelInput').style.display = 'block';
+        document.getElementById('PoInputs').style.display = 'block';
+        document.getElementById('PSOInputs').style.display = 'block';
+        document.getElementById('COInputs').style.display = 'block';
+        document.getElementById('displayButton').style.display = 'block';
+      }
+
+      // Attach the printPage function to the print button
+      document.getElementById('printButton').addEventListener('click', printPage);
+
+      // Add an event listener to the "Print Page" button to re-invoke the printing process
+      document.getElementById('printButton').addEventListener('click', function() {
+        // Hide the "Print Page" button before printing
+        this.style.display = 'none';
+        printPage();
+      });
+    </script>
+    
   </body>
   
 </html>
