minor changes dont worry

--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
     <title>CO PO Mapping</title>
     <link rel="icon" type="image/x-icon" href="img/DMClogoicon.ico">
     <link rel="stylesheet" href="style.css" />
-    <link
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css"rel="stylesheet">
 
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css"rel="stylesheet"/>
-
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css" rel="stylesheet"/>
     
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
     <script src="script.js"></script>
     <!-- Add any necessary CSS or other meta tags here -->
