--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
     <!-- Excel Load Button -->
     <div>
-
+<!--
       <div
         id="ExcelInput"
         class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white hidden"
@@ -356,8 +356,8 @@
                 Load Excel
               </button>
             </div>
-
-      <div id="ExcelInput" class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white " >
+-->
+      <div id="ExcelInput" class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white hidden" >
       <div>
         <h1  class="font-bold uppercase text-3xl">Upload Student Details</h1></div>
         <div class="my-2 flex">
@@ -368,8 +368,7 @@
           />
           <button
             id="loadButton"
-            class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-r-lg focus:outline-none"
-          >
+            class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-r-lg focus:outline-none" onclick="showPrintButton()">
             Load Excel
           </button>
         </div>
