--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link rel="icon" type="image/x-icon" href="img/DMClogoicon.ico">
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css" rel="stylesheet" />
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
   <script src="script.js"></script>
@@ -26,138 +25,162 @@
   <div class="flex justify-center items-center my-8">
     <h1 class="font-bold uppercase text-4xl text-black mb-4">Attainment Of Course & Program Outcome</h1>
   </div>
-  <div class="flex justify-center items-center min-h-screen" id="entireform">
-    <div class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white">
-      <div class="flex justify-center items-center">
-        <h1 class="font-bold uppercase text-5xl">Course Details</h1>
+
+  <div>
+ 
+    <div class="flex justify-center items-center min-h-screen" id="entireform">
+      <div class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white">
+        <div class="flex justify-center items-center">
+          <h1 class="font-bold uppercase text-5xl">Course Details</h1>
+        </div><br><br>
+        <label style="display: inline; font-size: 16px">
+          <img src="img/icons8-info-24.png" alt="Information" style="display: inline; vertical-align: middle;">
+          Enter course details
+        </label><br>
+        <form id="courseForm">
+          <div class="grid gap-5 md:grid-cols-2 mt-5">
+            <div>
+              <label for="programmeName">1. Name of the Programme:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="programmeName" name="programmeName" required placeholder="Ex. BCA"
+                oninput="validateTextInput(this)" />
+            </div>
+            <div>
+              <label for="department">2. Department:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="department" name="department" required placeholder="Ex. Computer Application"
+                oninput="validateTextInput(this)" />
+            </div>
+            <div>
+              <label for="courseTeacher">3. Name of the Course Teacher/Teachers:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="courseTeacher" name="courseTeacher" required placeholder="Ex. Krishnarao Rane"
+                oninput="validateTextInput(this)" />
+            </div>
+            <div>
+              <label for="courseCode">4. Course Code:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="courseCode" name="courseCode" required placeholder="Ex. UCAD-103" />
+            </div>
+            <div>
+              <label for="semester">5. Semester:</label>
+              <select
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                id="semester" name="semester" required>
+                <option value="" disabled selected>Select Semester</option>
+                <option value="I">I</option>
+                <option value="II">II</option>
+                <option value="III">III</option>
+                <option value="IV">IV</option>
+                <option value="V">V</option>
+                <option value="VI">VI</option>
+                <option value="VII">VII</option>
+                <option value="VIII">VIII</option>
+              </select>
+            </div>
+            <div>
+              <label for="courseTitle">6. Course Title:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="courseTitle" name="courseTitle" required
+                placeholder="Ex. Mobile Application Development" oninput="validateTextInput(this)" />
+            </div>
+            <div>
+              <label for="academicYear">7. Academic Year:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="academicYear" name="academicYear" required placeholder="Ex. 2022-2023"
+                onblur="validateYearRangeInput(this)" onkeydown="checkEnter(event)" />
+            </div>
+            <div>
+              <label for="totalStudents">8. Number of Students:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="totalStudents" name="totalStudents" required placeholder="Ex. 60"
+                onkeydown="checkEnter(event)" />
+            </div>
+
+            <div>
+              <label for="classroom">9. Class:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="classroom" name="classroom" required placeholder="Ex. FY-BCA"
+                oninput="validateTextInput(this)" />
+            </div>
+
+            <div>
+              <label for="division">10. Division:</label>
+              <select
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                id="division" name="division">
+                <option value="" disabled selected>Division</option>
+                <option value="A">A</option>
+                <option value="B">B</option>
+                <option value="C">C</option>
+                <option value="D">D</option>
+                <option value="E">E</option>
+                <option value="F">F</option>
+                <option value="G">G</option>
+                <option value="notApplicable">Not Applicable</option>
+              </select>
+            </div>
+
+            <div>
+              <label for="coThreshold">11. CO Threshold%:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="coThreshold" name="coThreshold" required placeholder="Ex. 40"
+                oninput="validateNumberInput(this)" />
+            </div>
+            <div>
+              <label for="targetPercentage">12. Institute Target Percentage:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="targetPercentage" name="targetPercentage" required placeholder="Ex. 50"
+                oninput="validateNumberInput(this)" />
+            </div>
+            <div>
+              <label for="totalCO">13. Number of COs:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="totalCO" name="totalCO" required placeholder="Ex. 4"
+                oninput="validateNumberInput(this)" />
+            </div>
+            <div>
+              <label for="totalPO">14. Number of POs:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="totalPO" name="totalPO" required placeholder="Ex. 5"
+                oninput="validateNumberInput(this)" />
+            </div>
+            <div>
+              <label for="totalPSO">15. Number PSO:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="totalPSO" name="totalPSO" required placeholder="Ex. 3"
+                oninput="validateNumberInput(this)" />
+            </div>
+            <div>
+              <label for="TotalMarks">16. SEE Marks:</label>
+              <input
+                class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
+                type="text" id="TotalMarks" name="TotalMarks" required placeholder="Ex. 60"
+                oninput="validateNumberInput(this)" />
+            </div>
+          </div>
+          <div class="my-2 w-1/2 lg:w-1/4 mx-auto">
+            <button
+              class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-lg w-full focus:outline-none focus:shadow-outline"
+              type="submit">
+              Confirm
+            </button>
+          </div>
+        </form>
       </div>
-      <form id="courseForm">
-        <div class="grid gap-5 md:grid-cols-2 mt-5">
-          <div>
-            <label for="programmeName">1. Name of the Programme:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="programmeName" name="programmeName" required placeholder="Ex. BCA"
-              oninput="validateTextInput(this)" />
-          </div>
-          <div>
-            <label for="department">2. Department:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="department" name="department" required placeholder="Ex. Computer Application"
-              oninput="validateTextInput(this)" />
-          </div>
-          <div>
-            <label for="courseTeacher">3. Name of the Course Teacher/Teachers:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="courseTeacher" name="courseTeacher" required placeholder="Ex. Krishnarao Rane"
-              oninput="validateTextInput(this)" />
-          </div>
-          <div>
-            <label for="courseCode">4. Course Code:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="courseCode" name="courseCode" required placeholder="Ex. UCAD-103" />
-          </div>
-          <div>
-            <label for="semester">5. Semester:</label>
-            <select class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              id="semester" name="semester" required>
-              <option value="" disabled selected>Select Semester</option>
-              <option value="I">I</option>
-              <option value="II">II</option>
-              <option value="III">III</option>
-              <option value="IV">IV</option>
-              <option value="V">V</option>
-              <option value="VI">VI</option>
-              <option value="VII">VII</option>
-              <option value="VIII">VIII</option>
-            </select>
-          </div>
-          <div>
-            <label for="courseTitle">6. Course Title:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="courseTitle" name="courseTitle" required placeholder="Ex. Mobile Application Development"
-              oninput="validateTextInput(this)" />
-          </div>
-          <div>
-            <label for="academicYear">7. Academic Year:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="academicYear" name="academicYear" required placeholder="Ex. 2022-2023"
-              onblur="validateYearRangeInput(this)" onkeydown="checkEnter(event)" />
-          </div>
-          <div>
-            <label for="totalStudents">8. Number of Students:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="totalStudents" name="totalStudents" required placeholder="Ex. 60"
-              onkeydown="checkEnter(event)" />
-          </div>
-
-          <div>
-            <label for="classroom">9. Class:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="classroom" name="classroom" required placeholder="Ex. FY-BCA"
-              oninput="validateTextInput(this)" />
-          </div>
-
-          <div>
-            <label for="division">10. Division:</label>
-            <select class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              id="division" name="division">
-              <option value="" disabled selected>Division</option>
-              <option value="A">A</option>
-              <option value="B">B</option>
-              <option value="C">C</option>
-              <option value="D">D</option>
-              <option value="E">E</option>
-              <option value="F">F</option>
-              <option value="G">G</option>
-              <option value="notApplicable">Not Applicable</option>
-            </select>
-          </div>
-
-          <div>
-            <label for="coThreshold">11. CO Threshold%:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="coThreshold" name="coThreshold" required placeholder="Ex. 40"
-              oninput="validateNumberInput(this)" />
-          </div>
-          <div>
-            <label for="targetPercentage">12. Institute Target Percentage:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="targetPercentage" name="targetPercentage" required placeholder="Ex. 50"
-              oninput="validateNumberInput(this)" />
-          </div>
-          <div>
-            <label for="totalCO">13. Number of COs:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="totalCO" name="totalCO" required placeholder="Ex. 4"
-              oninput="validateNumberInput(this)" />
-          </div>
-          <div>
-            <label for="totalPO">14. Number of POs:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="totalPO" name="totalPO" required placeholder="Ex. 5"
-              oninput="validateNumberInput(this)" />
-          </div>
-          <div>
-            <label for="totalPSO">15. Number PSO:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="totalPSO" name="totalPSO" required placeholder="Ex. 3"
-              oninput="validateNumberInput(this)" />
-          </div>
-          <div>
-            <label for="TotalMarks">16. SEE Marks:</label>
-            <input class="w-full bg-gray-100 text-gray-900 mt-2 p-3 rounded-lg focus:outline-none focus:shadow-outline"
-              type="text" id="TotalMarks" name="TotalMarks" required placeholder="Ex. 60"
-              oninput="validateNumberInput(this)" />
-          </div>
-        </div>
-        <div class="my-2 w-1/2 lg:w-1/4 mx-auto">
-          <button
-            class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-lg w-full focus:outline-none focus:shadow-outline"
-            type="submit">
-            Confirm
-          </button>
-        </div>
-      </form>
     </div>
   </div>
 
@@ -170,9 +193,14 @@
       <div id="poInputsContainer" class="p-4 space-y-2">
         <div class="flex justify-center items-center">
           <h3 class="font-bold uppercase text-3xl" id="poHeader" style="display: none">
-            PO Inputs
+            Program Outcome
           </h3>
         </div>
+        <br><br>  
+        <label style="display: inline;">
+          <img src="img/icons8-info-24.png" alt="Information" style="display: inline; vertical-align: middle;">
+          Enter Program Outcome (POs).
+        </label>
         <div id="poInputs">
           <!-- Placeholder for PO inputs -->
         </div>
@@ -183,23 +211,32 @@
       <div id="psoInputsContainer" class="p-4 space-y-2">
         <div class="flex justify-center items-center">
           <h3 class="font-bold uppercase text-3xl" id="psoHeader" style="display: none">
-            PSO Inputs
+            Program Specific Outcome 
           </h3>
         </div>
+        <br><br>  
+        <label style="display: inline;">
+          <img src="img/icons8-info-24.png" alt="Information" style="display: inline; vertical-align: middle;">
+          Enter Program Specific Outcome (PSOs).
+        </label>
         <div id="psoInputs">
           <!-- Placeholder for PSO inputs -->
         </div>
       </div>
     </div>
 
-
     <div id="COInputs" class="p-4 my-2 mx-2 rounded-lg shadow bg-white hidden">
       <div id="coInputsContainer" class="p-4 space-y-2">
         <div class="flex justify-center items-center">
           <h3 class="font-bold uppercase text-3xl" id="coHeader" style="display: none">
-            CO Inputs
+            Course Outcome
           </h3>
         </div>
+        <br><br>  
+        <label style="display: inline;">
+          <img src="img/icons8-info-24.png" alt="Information" style="display: inline; vertical-align: middle;">
+          Enter Course Outcome (COs).
+        </label>
         <div id="coInputs">
           <!-- Placeholder for CO inputs -->
         </div>
@@ -210,7 +247,7 @@
       <button id="displayButton"
         class="uppercase text-sm font-bold tracking-wide bg-blue-900 text-gray-100 p-3 rounded-lg w-max focus:outline-none focus:shadow-outline"
         style="display: none">
-        Display Input
+        Confirm
       </button>
     </div>
   </div>
@@ -239,7 +276,7 @@
         <label style="display: inline;">
           <img src="img/icons8-info-24.png" alt="Information" style="display: inline; vertical-align: middle;">
           The Excel sheet should contain only three columns with the headings: "Sr. No," "Roll No," and "Name of the
-          student."
+          student".
         </label>
       </div>
     </div>
@@ -297,7 +334,7 @@
         teacherSignature.style.display = 'inline-block';
         teacherSignature.style.marginRight = '309px'; // Increase the margin-right for more distance
         teacherSignature.innerHTML = `
-          <div style="border-top: 2px solid #000;">Teacher Incharge</div>
+          <div style="border-top: 2px solid #000;">Faculty</div>
         `;
 
         // Create the Principal signature
@@ -346,7 +383,6 @@
         printPage();
       });
     </script>
-
 </body>
 
 </html>
