--- a/index.html
+++ b/index.html
@@ -275,8 +275,9 @@
       <div>
         <label style="display: inline;">
           <img src="img/icons8-info-24.png" alt="Information" style="display: inline; vertical-align: middle;">
-          The Excel sheet should contain only three columns with the headings: "Sr. No," "Roll No," and "Name of the
-          student".
+          Please upload Excel file with one sheet only  <br>
+          <img src="img/icons8-info-24.png" alt="Information" style="display: inline; vertical-align: middle;">
+          The Excel sheet should contain only three columns with the headings: "Sr. No," "Roll No," and "Name of the student".
         </label>
       </div>
     </div>
