removed see marks table

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   <div>
 
     <div id="ExcelInput"
-      class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white hidden">
+      class="w-full p-8 my-4 md:px-12 lg:w-9/12 lg:pl-20 lg:pr-40 mx-auto rounded-2xl shadow-2xl bg-white ">
       <div>
         <h1 class="font-bold uppercase text-3xl">Upload Student Details</h1>
       </div>
@@ -289,7 +289,7 @@
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView2"></div>
 
     <!-- Table 3 SEE Marks Entry-->
-    <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView3"></div>
+    <!-- <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView3"></div> -->
 
     <!-- Table 4 Feedback-->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView4"></div>
