fix some errors

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView2"></div>
 
     <!-- Table 3 SEE Marks Entry-->
-    <!-- <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView3"></div> -->
+    <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView3"></div>
 
     <!-- Table 4 Feedback-->
     <div class="bg-white p-4 mt-4 mx-4 rounded-lg shadow-lg hidden" id="gridView4"></div>
